Solved 5th homework on this branch

--- a/TV Shows/TV Shows/Home/Home.storyboard
+++ b/TV Shows/TV Shows/Home/Home.storyboard
@@ -75,6 +75,7 @@
             <point key="canvasLocation" x="-23" y="58"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.32156862749999998" green="0.21176470589999999" blue="0.54901960780000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
